Some work on providing default post content
To make it easier to create new posts

--- a/soverance.com/Views/Blog/ViewPost.cshtml
+++ b/soverance.com/Views/Blog/ViewPost.cshtml
@@ -66,9 +66,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- START DATABASE BLOG ENTRY -->
+                            <!-- START DATABASE BLOG CONTENT -->
                             @Html.Raw(@WebUtility.HtmlDecode(Model.Content))
-                            <!-- END DATABASE BLOG ENTRY -->
+                            <!-- END DATABASE BLOG CONTENT -->
                         </div>
                         <div class="bottom-info-bl">
                             <div class="table">
