--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -36,11 +36,14 @@
                         <label asp-for="Date" class="control-label"></label>
                         <input asp-for="Date" class="form-control width-30" value="@ViewBag.CurrentDate" />
                         <span asp-validation-for="Date" class="text-danger"></span>
+                        <label asp-for="Image" class="control-label"></label>
+                        <input asp-for="Image" class="form-control" />
+                        <span asp-validation-for="Image" class="text-danger"></span>
                         <label asp-for="Title" class="control-label"></label>
                         <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                         <label asp-for="Content" class="control-label"></label>
-                        <textarea asp-for="Content" class="form-control" rows="25"></textarea>
+                        <textarea asp-for="Content" class="form-control" rows="25">@ViewBag.DefaultPostContent</textarea>
                         <span asp-validation-for="Content" class="text-danger"></span>
                         <label asp-for="Author" class="control-label"></label>
                         <input asp-for="Author" class="form-control" />
