--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -35,8 +35,11 @@
                         <span asp-validation-for="CategoryId" class="text-danger"></span>
                         <p></p>
                         <label asp-for="Date" class="control-label"></label>
-                        <input asp-for="Date" class="form-control width-50" value="@DateTime.Now" />
+                        <input asp-for="Date" class="form-control width-50" />
                         <span asp-validation-for="Date" class="text-danger"></span>
+                        <label asp-for="Image" class="control-label"></label>
+                        <input asp-for="Image" class="form-control" />
+                        <span asp-validation-for="Image" class="text-danger"></span>
                         <label asp-for="Title" class="control-label"></label>
                         <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
