Default post content now available

--- a/soverance.com/Views/Blog/CreatePost.cshtml
+++ b/soverance.com/Views/Blog/CreatePost.cshtml
@@ -43,7 +43,7 @@
                         <input asp-for="Title" class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                         <label asp-for="Content" class="control-label"></label>
-                        <textarea asp-for="Content" class="form-control" rows="25">@ViewBag.DefaultPostContent</textarea>
+                        <textarea asp-for="Content" class="form-control" rows="25"></textarea>
                         <span asp-validation-for="Content" class="text-danger"></span>
                         <label asp-for="Author" class="control-label"></label>
                         <input asp-for="Author" class="form-control" />
