--- a/soverance.com/Views/Blog/ViewPost.cshtml
+++ b/soverance.com/Views/Blog/ViewPost.cshtml
@@ -56,7 +56,7 @@
                                 <div class="table-row">
                                     <div class="table-cell valign-top">
                                         <div class="fsize-14 fweight-700 uppercase color-1">
-                                            @Html.DisplayFor(model => model.CategoryId)
+                                            @Html.DisplayFor(model => model.Category.CategoryName)
                                         </div>
                                     </div>
                                     <div class="table-cell valign-top text-right">
