--- a/soverance.com/Views/Blog/ViewPost.cshtml
+++ b/soverance.com/Views/Blog/ViewPost.cshtml
@@ -83,37 +83,37 @@
                 <div class="row mt60 wow fadeInLeft">
                     <div class="related-post">
                         <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
+                            <a href="/ethereal" class="related-wrapper">
                                 <div class="related-img">
                                     <img src="~/images/post/related-1.jpg" alt="">
                                 </div>
                                 <div class="related-title">
                                     <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Alcatra venison salsmi
+                                        Ethereal Legends
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
+                            <a href="/endlessreach" class="related-wrapper">
                                 <div class="related-img">
                                     <img src="~/images/post/related-2.jpg" alt="">
                                 </div>
                                 <div class="related-title">
                                     <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Shoulder meatbal
+                                        Endless Reach
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
+                            <a href="/echosphere" class="related-wrapper">
                                 <div class="related-img">
                                     <img src="~/images/post/related-3.jpg" alt="">
                                 </div>
                                 <div class="related-title">
                                     <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Sousage pork chuck
+                                        Echosphere
                                     </div>
                                 </div>
                             </a>
