Consulting page looks good

--- a/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
@@ -102,7 +102,7 @@
                                     </p>
                                     <p>
                                         As a member of the Microsoft Partner Network, I can help your company design, build, and optimize your computer network into
-                                        a hybrid environment of on-prem and cloud resources, ideal for modern application development. <a href="/pricing">Check out all of my available services.</a>
+                                        a hybrid environment of on-prem and cloud resources, ideal for modern application development. <a href="/consulting">Check out all of my available services.</a>
                                         To facilitate my skills, I use Unreal Engine technology to bring my ideas to life as innovative gaming experiences for platforms such as Steam, PlayStation, XBox, and Oculus VR.
 
                                     </p>
