--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -251,11 +251,11 @@
                             Register for our Newsletter now
                         </div>
                         <div class="subtitle">
-                            Newslatter
+                            Newsletter
                         </div>
                     </div>
                     <div class="color-white">
-                        We are always ready to welcome you!
+                        Get exclusive updates about our latest projects!
                     </div>
                 </div>
             </div>
