--- a/soverance.com/Views/Home/FAQ.cshtml
+++ b/soverance.com/Views/Home/FAQ.cshtml
@@ -127,7 +127,7 @@
                             <div class="collapse spoiler-hidden plr20" id="spoiler-7">
                                 <div class="open-bl">
                                     <p>
-                                        Soverance Studios is a small company with limited funding, and therefore generally does not hire full time W2 employees.
+                                        Soverance Studios is a small, independet company with limited funding, and therefore generally does not hire full time W2 employees.
                                         Instead, we tend to hire short term 1099 independent contractors to fill in skill gaps when necessary.
                                     </p>
                                 </div>
@@ -184,7 +184,8 @@
                                         though we do provide technical support for all contractors on Windows environments.
                                     </p>
                                     <p>
-                                        For certain key roles in the Soverance organization, that person will be provided with an Office 365 E3 subscription (<i>which includes full desktop versions of Word, Excel, etc</i>).
+                                        For certain key roles in the Soverance organization, the person serving in this role will be provided with an @@soverance.com email address 
+                                        and an Office 365 E3 subscription (<i>which includes full desktop versions of Word, Excel, etc</i>).
                                         This Office 365 subscription also includes access to various online applications hosted in Microsoft Azure.
                                     </p>
                                 </div>
@@ -233,6 +234,9 @@
                                             Microsoft enterprise solutions consulting
                                         </li>
                                         <li class="color5">
+                                            Active Directory / Group Policy auditing
+                                        </li>
+                                        <li class="color5">
                                             Business process automation with PowerShell
                                         </li>
                                         <li class="color5">
@@ -251,6 +255,11 @@
                                             Project Management consulting
                                         </li>
                                     </ul>
+                                    <p></p>
+                                    <p>
+                                        Soverance Studios charges consulting and development fees at a variable rate, based on the project’s scope, term, and complexity.  Initial consultations (via email) and price quotes are free. 
+                                        To obtain an initial consultation or to price quote a specific project, please contact sales@soverance.com.
+                                    </p>
                                 </div>
                             </div>
                         </li>
