--- a/soverance.com/Views/Home/Gallery.cshtml
+++ b/soverance.com/Views/Home/Gallery.cshtml
@@ -28,24 +28,24 @@
                         <div class="filter-item active" data-filter="all">
                             All
                         </div>
-                        <div class="filter-item" data-filter="origin">
-                            Origin
+                        <div class="filter-item" data-filter="ethereal">
+                            Ethereal Legends
                         </div>
-                        <div class="filter-item" data-filter="playstation-4">
-                            Playstation 4
+                        <div class="filter-item" data-filter="endlessreach">
+                            Endless Reach
                         </div>
-                        <div class="filter-item" data-filter="steam">
-                            Steam
+                        <div class="filter-item" data-filter="echosphere">
+                            Echosphere
                         </div>
-                        <div class="filter-item" data-filter="uplay">
-                            Uplay
+                        <div class="filter-item" data-filter="ctf-elemental">
+                            CTF-Elemental
                         </div>
-                        <div class="filter-item" data-filter="xbox-one">
-                            Xbox one
+                        <div class="filter-item" data-filter="ffxi-fighter">
+                            FFXI Fighter
                         </div>
                     </div>
                     <div class="item_container relative mt40">
-                        <div class="item origin col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item ethereal col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-1.jpg" alt="">
@@ -53,7 +53,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Ethereal - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item playstation-4 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item endlessreach col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-2.jpg" alt="">
@@ -75,7 +75,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Endless Reach - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item uplay col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item ctf-elemental col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-3.jpg" alt="">
@@ -97,7 +97,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            CTF-Elemental - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item xbox-one col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                        <div class="item ffxi-fighter col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-4.jpg" alt="">
@@ -119,7 +119,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            FFXI: Fighter - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item steam col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                        <div class="item echosphere col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-5.jpg" alt="">
@@ -141,7 +141,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Echosphere - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -155,7 +155,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item playstation-4 col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                        <div class="item endlessreach col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-6.jpg" alt="">
@@ -163,7 +163,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Endless Reach - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item origin col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item ethereal col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-8.jpg" alt="">
@@ -185,7 +185,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Ethereal - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item origin col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item ethereal col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-7.jpg" alt="">
@@ -207,7 +207,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Ethereal - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="item origin col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <div class="item ethereal col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div class="item-content">
                                 <div class="image-bl">
                                     <img src="~/images/gallery/gallery-masonry-9.jpg" alt="">
@@ -229,7 +229,7 @@
                                 <div class="item-info">
                                     <div class="info-bl text-center">
                                         <a href="single-image.html" data-trim="40" class="item-title color-white fsize-24 fweight-700 font-agency uppercase">
-                                            Using Banner Stands To Increase Trade
+                                            Ethereal - image description
                                         </a>
                                         <div class="btn-container text-center mt30">
                                             <a href="#" class="item-btn inline-block valign-middle">
