--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -254,6 +254,9 @@
                                         <a asp-area="" asp-controller="Home" asp-action="About">About</a>
                                     </li>
                                     <li>
+                                        <a asp-area="" asp-controller="Home" asp-action="Consulting">Consulting</a>
+                                    </li>
+                                    <li>
                                         <a asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a>
                                     </li>
                                     <li class="menu-item-has-children">
