Fix for SEO-ready blog post urls

--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -480,7 +480,7 @@
                                 {
                                     <tr>
                                         <td>
-                                            <a asp-action="ViewPost" asp-route-id="@post.PostId" class="latest-item">
+                                            <a asp-action="ViewPost" asp-route-slug="@post.Slug" class="latest-item">
                                                 <div class="table table-nobackground">
                                                     <div class="table-row">
                                                         <div class="latest-img table-cell valign-middle">
