Some work on the Ethereal Guide

--- a/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/EULA.cshtml
@@ -46,7 +46,7 @@
                 </div>
                 <div class="post-content mt60">
                     <div class="post-image">
-                        <img src="~/images/post/post-full.jpg" alt="">
+                        <img src="~/images/games/ethereal/eula-header.jpg" alt="">
                     </div>
                     <div class="post-bottom background-4">
                         <div class="p60">
@@ -141,46 +141,6 @@
                                     <span class="color-2 fsize-14 ml5">Ethereal EULA</span>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt60 wow fadeInLeft">
-                    <div class="related-post">
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-1.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Alcatra venison salsmi
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-2.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Shoulder meatbal
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="related-item col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                            <a href="post.html" class="related-wrapper">
-                                <div class="related-img">
-                                    <img src="~/images/post/related-3.jpg" alt="">
-                                </div>
-                                <div class="related-title">
-                                    <div class="font-agency fsize-24 fweight-700 color-white uppercase">
-                                        Sousage pork chuck
-                                    </div>
-                                </div>
-                            </a>
                         </div>
                     </div>
                 </div>
