--- a/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
+++ b/soverance.com/Areas/Ethereal/Views/Ethereal/Guide.cshtml
@@ -27,18 +27,18 @@
                 <div class="posts-nav">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="#" class="nav_prev nav-btn td-none" style="background-image: url('/images/blog/blog-img-1.jpg');">
+                            <a href="/ethereal/eula" class="nav_prev nav-btn td-none" style="background-image: url('/images/games/ethereal/eula-pre-header.jpg');">
                                 <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Previous Post</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Shirloin leberkas pig, rump ham hock tail shank burgdogen</div>
+                                    <div class="fsize-14 fweight-700 uppercase color-1">Ethereal Loot Table</div>
+                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Find out where all the best spells, weapons, and armor can be found!</div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-md-6 text-right">
                             <a href="#" class="nav_next nav-btn td-none" style="background-image: url('/images/blog/blog-img-2.jpg');">
                                 <div class="nav_content">
-                                    <div class="fsize-14 fweight-700 uppercase color-1">Next Post</div>
-                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Meatlof strip steak ball tip venison prosciuto shankle</div>
+                                    <div class="fsize-14 fweight-700 uppercase color-1">Screenshots with Ansel</div>
+                                    <div class="nav-title font-agency fsize-24 fweight-700 color-white uppercase">Learn how to take beautiful high quality screenshots with Nvidia Ansel.</div>
                                 </div>
                             </a>
                         </div>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="post-content mt60">
                     <div class="post-image">
-                        <img src="~/images/post/post-full.jpg" alt="">
+                        <img src="~/images/games/ethereal/guide-header.jpg" alt="">
                     </div>
                     <div class="post-bottom background-4">
                         <div class="p60">
@@ -54,41 +54,48 @@
                                 <div class="table-row">
                                     <div class="table-cell valign-top">
                                         <div class="fsize-14 fweight-700 uppercase color-1">
-                                            Xbox
+                                            Ethereal Game Guide
                                         </div>
                                     </div>
                                     <div class="table-cell valign-top text-right">
                                         <div class="fsize-14 fweight-700 uppercase">
-                                            Mar 14, 2018
+                                            
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="mt20">
-                                <p>Brisket pig pork belly beef porchetta filet mignon pork loin capicola ribeye cow picanha. Bresaola leberkas pork loin, shank hamburger chuck andouille cupim fatback alcatra turkey flank bacon. Bresaola pork loin fatback meatloaf turducken pork belly andouille ham hock picanha. Pancetta sausage cow, spare ribs flank kevin hamburger tri-tip rump pork loin alcatra jerky pig tenderloin. Meatloaf jowl tail doner ground.</p>
-                                <p>Brisket ham hock chuck cupim andouille beef ribs turducken pork belly. Picanha filet mignon tenderloin venison sirloin biltong. Picanha jerky venison chuck, filet mignon sirloin t-bone rump short loin salami pork loin tenderloin corned beef swine ground round. Ball tip rump prosciutto ham. Sirloin venison jowl brisket shank andouille.</p>
+                                <p>Welcome to the <i>Ethereal Legends</i> Game Guide!</p>
+                                <p>Here on this site is where you'll find the information you’ll need to know to in order to make your experience playing Ethereal Legends the best it can possibly be. Use the main menu to navigate through the various topics; peruse update notes in the Version History, learn more about the game’s features and the options at your disposal, check out the game’s source code, or get involved in the community around Ethereal.</p>                                
                             </div>
                             <div class="post-quote mt120">
                                 <blockquote class="p40 text-center">
                                     <div class="author-avatar">
-                                        <img src="~/images/blog/status-author.jpg" alt="">
+                                        <img src="~/images/team/scott-mccutchen-author.jpg" alt="">
                                     </div>
                                     <div class="table mb0 pb30 mt40">
                                         <div class="table-row">
                                             <div class="table-cell valign-middle">
                                                 <a href="post.html" class="post-title fsize-24 fweight-700 font-agency color-white uppercase">
-                                                    William Castro
+                                                    Scott McCutchen
                                                 </a>
                                                 <div class="fsize-14 fweight-700 uppercase color-1">
-                                                    Gamer
+                                                    Ethereal Designer
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="text-container fsize-18 italic ptb30">
-                                        «Fatback landjaeger prosciutto jerky ham. Salami cupim leberkas.
-                                        Kevin bacon shankle tenderloin ground round. Spare ribs pork belly cupim.
-                                        Shoulder short ribs jowl pork chop. Chuck ham t-bone.»
+                                        «Ethereal Legends is a game built by passion, and was brought into existence through sheer force of will and unrelenting persistence. It is the result of countless hours of tackling obstacles head on; a philosophy we use to guide all our actions here at Soverance Studios.
+                                        <br />
+                                        <br />
+                                        In no other world than the one we live in today could this game have existed. With Unreal 4, we’ve been able to stand on the shoulders of giants, and they’ve allowed us to deliver our vision to you, unencumbered.
+                                        <br />
+                                        <br />
+                                        I finally believe it: “The only limits are your own imagination…”
+                                        <br />
+                                        <br />
+                                        I hope you’ll enjoy playing Ethereal Legends as much as I enjoyed making it.»
                                     </div>
                                 </blockquote>
                             </div>
